Update MovieAnalyzer.java